<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_perfil_cliente"
    android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/progressEditarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/layoutEditarCliente"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:letterSpacing="0.05"
                android:text="@string/editar_perfil"
                android:textColor="@color/tertiary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgEditarFotoCliente"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:background="@color/secondary"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_default"
                app:contentPadding="2dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:strokeColor="@color/tertiary"
                app:strokeWidth="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/toca_la_imagen_para_cambiarla"
                android:textColor="@color/tertiary"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EstiloInputRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_completo"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EstiloInputRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_de_usuario"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EstiloInputRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditCiudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ciudad"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/tus_preferencias_alimenticias"
                android:textAlignment="center"
                android:textColor="@color/tertiary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alignmentMode="alignBounds"
                android:columnCount="2"
                android:foregroundGravity="center_horizontal"
                android:rowCount="3">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEditVegano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/tertiary"
                    android:text="@string/vegano"
                    android:textColor="@color/white" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEditVegetariano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/tertiary"
                    android:text="@string/vegetariano"
                    android:textColor="@color/white" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEditLactosa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/tertiary"
                    android:text="@string/sin_lactosa"
                    android:textColor="@color/white" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEditCeliaco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/tertiary"
                    android:text="@string/celiaco"
                    android:textColor="@color/white" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEditOtro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/tertiary"
                    android:text="@string/otro"
                    android:textColor="@color/white" />
            </GridLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEditEspecifiqueOtro"
                style="@style/EstiloInputRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditEspecifiqueOtro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cual"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnGuardarCambiosCliente"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/tertiary"
                android:text="@string/guardar_cambios"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="16dp" />

            <Button
                android:id="@+id/btnVolverSettings"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cancelar"
                android:textColor="@color/tertiary" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>